Modal: -separate classes to better readability and correct time to show cursor when over the link box MainSection: -Delete div with and let a tag be the box container -Adjust styles Reset css: -Add isolation

--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -25,6 +25,7 @@ body,
     "Lucida Sans", Arial, sans-serif;
   font-size: 16px;
   scroll-behavior: smooth;
+  isolation: isolate;
 }
 
 a {
